pyinterp/pyinterp/pyinterp/tests/must_pass/scope/errors/unbound_local_error1.py
def f():
    x
    x = 1

f()